Sun Nov 17 18:54:05 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: more
	  int -> bool changes.
	* backends/quartz/btree_base.cc: Clarified comments.

Sun Nov 17 14:19:30 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Updated to reflect removal of Btree_item.

Sun Nov 17 14:12:12 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/: Eliminate Btree_item - wherever it's used we
	  only actually want the tag or key, so it's cleaner and clearer
	  to just pass a pointer to a string.
	
Sun Nov 17 13:34:08 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/quartzdesign.html: Quartz mini-overhaul:
	  Removed Btree::Bcursor_create() and just made Bcursor's ctor
	  public - now you can just create a Bcursor on the stack rather
	  than being forced to use AutoPtr; removed valid_handle - the
	  code is clearer without it; sys_close now inlined from header;
	  changed int/char to bool where appropriate; changed some methods
	  which now always throw on error to return void not bool; moved
	  quartztest's test_btree1 to btreetest as test_simple1; changed
	  a few remaining uses of "struct Btree" to just plain "Btree";
	  brought the btree docs in quartzdesign.html up-to-date, apart
	  from the error handling section.

Sat Nov 16 01:45:28 GMT 2002  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/quartz/quartz_table.cc: Tidying up odds and ends.

Fri Nov 15 17:46:38 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated ready for 0.6.0 with changes made so far.

Fri Nov 15 17:06:58 GMT 2002  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Avoid double debug output if we get a
	  signal inside the testsuite code itself.

Fri Nov 15 17:00:15 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree_api.txt,docs/Makefile.am,docs/index.html,
	  docs/quartzdesign.html,docs/remote_protocol.html,