@@ -1,3 +1,9 @@
+Sun Nov 17 20:03:24 GMT 2002  Olly Betts <olly@survex.com>
+
+	* backends/quartz/quartz_record.cc,backends/quartz/quartz_utils.h:
+	  Added a more compact integer packing for the last integer in
+	  a key or tag.
+
 Sun Nov 17 18:54:05 GMT 2002  Olly Betts <olly@survex.com>
 
 	* backends/quartz/btree.cc,backends/quartz/btree.h: more
